Add basic authentication support for APIM Gateway

--- a/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/publisher/site/conf/locales/jaggery/locale_default.json
+++ b/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/publisher/site/conf/locales/jaggery/locale_default.json
@@ -495,7 +495,7 @@
     "Subscription Tier": "Subscription Tier",
     "Subscription Tiers": "Subscription Tiers",
     "Subscription is pending approval": "Subscription is pending approval",
-    "Subscription tiers are not applicable for this API, as it is only protected with mutual SSL." : "Subscription are not applicable for this API, as it is only protected with mutual SSL.",
+    "Subscription tiers are not applicable for this API, as it is not protected with OAuth2." : "Subscription tiers are not applicable for this API, as it is not protected with OAuth2.",
     "Subscriptions Created Over Time": "Subscriptions Created Over Time",
     "Subscriptions": "Subscriptions",
     "Success!": "Success!",
